Day 12/project
SyntaxError: invalid syntax
developer@developer:~/Desktop/test $ /bin/python3 /home/developer/Desktop/problem.py
Data fetched and saved at 2025-09-04 11:57:44.005442
^CTraceback (most recent call last):
  File "/home/developer/Desktop/problem.py", line 38, in <module>
    time.sleep(10800)  # Sleep for 3 hours (10800 seconds)
KeyboardInterrupt

developer@developer:~/Desktop/test $ sed -E 's/([0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2})\.[0-9]+/\1/' weather_data.csv > weather_data_clean.csv
developer@developer:~/Desktop/test $ clickhouse-client -h localhost --user sahil --password '123' 
 FORMAT CSV" < weather_data_clean.csvClickHouse client version 18.16.1.
Connecting to localhost:9000 as user sahil.
Connected to ClickHouse server version 25.7.1 revision 54479.

5eed76a43a70 :) --query="INSERT INTO weather_forecast2 FORMAT CSV" < weather_data_clean.csv^C
5eed76a43a70 :) ^C
developer@developer:~/Desktop/test $ clickhouse-client -h localhost --user sahil --password '123' --query="INSERT INTO weather_forecast2 FORMAT CSV" < weather_data_clean.csv
developer@developer:~/Desktop/test $ 
